# stark

./: .buildinfo  .gitignore  CMakeLists.txt  CNAME  LICENSE  README.md  architecture.html  attachments.html  chat.md  contact.html  deformables.html  extending.html  genindex.html  hello_world.html  index.html  io.html  logging infra proposal.md  objects.inv  presets.html  problem_representation.html  profiler.sh  pyproject.toml  python notes.md  rb_constraints.html  rigidbodies.html  search.html  searchindex.js  settings.html  setup.html  shuttle_stark.yaml  simulation_loop.html  stark API generalization.txt  stark callback pseudocode.txt  stark repo TODO.txt  stark.yaml  symx port TODO.md  symx readme.md  update report.md
app/: CMakeLists.txt  gripper.cpp  gripper.h  kobuki.cpp  kobuki.h  main.cpp  main_refactor.cpp  main_refactor_deformables.cpp  paths.h  rb_constraint_test_scenes.cpp  rb_constraint_test_scenes.h  scenes.cpp  scenes.h  scenes_cloth.cpp  scenes_cloth.h  scenes_deformable_solids.cpp  scenes_interactions.cpp  scenes_interactions.h  scenes_rigidbodies.cpp  scenes_rigidbodies.h
examples/: CMakeLists.txt  main.cpp  paths.h  rb_constraint_test_scenes.cpp  rb_constraint_test_scenes.h
examples/_old/: kobuki.cpp  kobuki.h  main_refactor.cpp  scenes_cloth.cpp  scenes_deformable_solids.cpp  scenes_deformable_solids.h  scenes_interactions.cpp  scenes_rigidbodies.cpp  scenes_rigidbodies.h
examples/res/: tire_sedan.vtk
examples/res/robotic_hand/: LICENSE.txt
pystark/cpp/: CMakeLists.txt  nanobind_stark_include_all.h  pystark_main.cpp
pystark/cpp/core/: pystark_Console.cpp  pystark_Logger.cpp  pystark_Settings.cpp
pystark/cpp/models/: pystark_Simulation.cpp  pystark_models.h
pystark/cpp/models/deformables/: pystark_Deformables.cpp  pystark_DeformablesMeshOutput.cpp
pystark/cpp/models/interactions/: pystark_EnergyFrictionalContact.cpp
pystark/cpp/models/presets/: pystark_DeformablesPresets.cpp  pystark_RigidBodyPresets.cpp
pystark/cpp/models/rigidbodies/: pystark_RigidBodies.cpp  pystark_RigidBodyHandler.cpp  pystark_rigidbody_constraints_ui.cpp
pystark/cpp/utils/: pystark_utils.cpp  pystark_utils.h
stark/: CMakeLists.txt
stark/include/: stark
stark/src/: hola.cpp  hola.h
stark/src/constructs/: VehicleFourWheels.cpp  VehicleFourWheels.h  include_ui.h
stark/src/core/: AdaptiveParameter.cpp  AdaptiveParameter.h  Callbacks.h  Console.cpp  Console.h  EventDrivenScript.cpp  EventDrivenScript.h  Logger.cpp  Logger.h  NewtonsMethod.cpp  NewtonsMethod.h  Settings.cpp  Settings.h  Stark.cpp  Stark.h  _old_NewtonsMethod.cpp  include_ui.h  linear_system.cpp  linear_system.h
stark/src/models/: BaseRigidBodyConstraints.h  Cloth.cpp  Cloth.h  DeformableSolids.cpp  DeformableSolids.h  DerivedRigidBodyConstraints.h  EnergyRigidBodyConstraints.cpp  EnergyRigidBodyConstraints.h  EnergyRigidBodyInertia.cpp  EnergyRigidBodyInertia.h  EventDrivenScript.cpp  EventDrivenScript.h  FourWheelsVehicleRigidBodySystem.h  Interactions.cpp  Interactions.h  IntervalConnectivity.h  IntervalVector.h  MeshOutputGroups.cpp  MeshOutputGroups.h  MotorController.h  PIDController.h  RB_Deformable_Contacts.h  RB_Deformable_Friction.h  RigidBodies.cpp  RigidBodies.h  RigidBodiesData.h  RigidBodiesInternal.cpp  RigidBodiesInternal.h  RigidBodyConstraints.cpp  RigidBodyConstraints.h  RigidBodyContacts.h  RigidBodyDynamics.cpp  RigidBodyDynamics.h  RigidBodyFriction.h  RigidBodyHandler.cpp  RigidBodyHandler.h  Simulation.cpp  Simulation.h  TriangleMeshContacts.h  TriangleMeshFriction.h  (+19 more)
stark/src/models/constructs/: RoboticHand.cpp  RoboticHand.h  include.h
stark/src/models/deformables/: DeformableHandler.cpp  DeformableHandler.h  DeformableLineHandler.cpp  DeformableLineHandler.h  DeformableSolidsLines.cpp  DeformableSolidsLines.h  DeformableSolidsSurfaces.cpp  DeformableSolidsSurfaces.h  DeformableSolidsVolumes.cpp  DeformableSolidsVolumes.h  DeformableSurfaceHandler.cpp  DeformableSurfaceHandler.h  DeformableVolumeHandler.cpp  DeformableVolumeHandler.h  Deformables.cpp  Deformables.h  DeformablesMeshOutput.cpp  DeformablesMeshOutput.h  EnergyEdgeStrain.cpp  EnergyEdgeStrain.h  EnergyFrictionalContact.cpp  EnergyFrictionalContact.h  EnergyPointInertia.cpp  EnergyPointInertia.h  EnergyPointLumpedMassAndDamping.cpp  EnergyPointLumpedMassAndDamping.h  EnergyPointPrescribedPositions.cpp  EnergyPointPrescribedPositions.h  EnergyTetStrain.cpp  EnergyTetStrain.h  EnergyTriangleBendingBergou06.cpp  EnergyTriangleBendingBergou06.h  EnergyTriangleBendingGrinspun03.cpp  EnergyTriangleBendingGrinspun03.h  EnergyTriangleStrain.cpp  EnergyTriangleStrain.h  Id.cpp  Id.h  MeshOutputGroups.cpp  MeshOutputGroups.h  (+21 more)
stark/src/models/interactions/: EnergyAttachments.cpp  EnergyAttachments.h  EnergyFrictionalContact.cpp  EnergyFrictionalContact.h  EnergyFrictionalContact_NEW_DRAFT.cpp  EnergyFrictionalContact_NEW_DRAFT.h  FrictionalContact_orig_refactored.cpp  Interactions.cpp  Interactions.h  contact_and_friction_data.h  friction_geometry.cpp  friction_geometry.h
stark/src/models/presets/: DeformablesPresets.cpp  DeformablesPresets.h  Presets.cpp  Presets.h  RigidBodyPresets.cpp  RigidBodyPresets.h  deformables_preset_types.cpp  deformables_preset_types.h
stark/src/models/rigidbodies/: BaseRigidBodyConstraints.h  EnergyRigidBodyConstraint_AnchorPoints.cpp  RigidBodies.cpp  (+21 more)
stark/src/sim/: AdaptiveParameter.h  Callbacks.h  NewtonsMethod.cpp  NewtonsMethod.h  Settings.cpp  Settings.h  Simulation.cpp  Simulation.h
stark/src/solver/: AdaptiveParameter.cpp  AdaptiveParameter.h  Callbacks.h  Energy.h  MeshWriter.h  NewtonsMethod.cpp  Settings.cpp  Settings.h  Stark.cpp  Stark.h
stark/src/utils/: Console.cpp  Console.h  Logger.cpp  Logger.h  Mesh.h  MeshWithDynamics.h  MultiMesh.h  MultiMeshEdges.cpp  MultiMeshEdges.h  Output.cpp  Output.h  blends.cpp  blends.h  include.h  inertia_tensors.cpp  inertia_tensors.h  linear_system.cpp  linear_system.h  mesh_generators.cpp  mesh_generators.h  mesh_utils.cpp  mesh_utils.h  timestamp.h  unordered_array_set_and_map.h
tests/: CMakeLists.txt  rb_constraints.cpp
(+115 files in other folders)
