[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"


[project]
name = "stark-sim"
version = "0.1.0"
description = "STARK: multiphysics simulation framework powered by SymX"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

authors = [
    { name = "José Antonio Fernández-Fernández" }
]

dependencies = [
    "numpy"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]


[project.urls]
Homepage = "https://github.com/InteractiveComputerGraphics/STARK"
Documentation = "https://stark-sim.readthedocs.io/"
Repository = "https://github.com/InteractiveComputerGraphics/STARK"
Issues = "https://github.com/InteractiveComputerGraphics/STARK/issues"


[tool.scikit-build]
minimum-version = "0.10"

# Persistent build directory.
# This enables incremental local rebuilds instead of rebuilding everything
# in a temporary directory every time.
build-dir = "build/{wheel_tag}"

# The Python package lives in pystark/pystark/.
# The resulting import name is:
#   import pystark
wheel.packages = ["pystark/pystark"]


[tool.scikit-build.build]
# Build only the Python extension target when building wheels.
targets = ["pystark"]


[tool.scikit-build.cmake.define]
STARK_BUILD_PYTHON_BINDINGS = "ON"
STARK_BUILD_EXAMPLES = "OFF"
STARK_BUILD_TESTS = "OFF"

STARK_ENABLE_AVX2 = "OFF"
TMCD_ENABLE_AVX2 = "OFF"
SYMX_ENABLE_AVX2 = "OFF"
